# Informatica-2

./: README.md
Taller 1/: ejercicio-10.cpp  ejercicio-14.cpp  ejercicio-18.cpp  ejercicio-2.cpp  ejercicio-22.cpp  ejercicio-26.cpp  ejercicio-30.cpp  ejercicio-6.cpp  problema-10.cpp  problema-12.cpp  problema-14.cpp  problema-2.cpp  problema-4.cpp  problema-6.cpp
Taller 1/Ejercicio-16/: main.cpp
Taller 1/Ejercicio-20/: Ejercicio20.cpp  untitled.pro
Taller 1/Ejercicio-4/: main.cpp
Taller 1/Ejercicio12/: main.cpp
Taller 1/Ejercicio24/: main.cpp
Taller 1/Ejercicio8/: main.cpp
Taller 1/Problema12/: main.cpp
Taller 1/Problema16/: main.cpp
Taller 1/Problema4/: main.cpp
Taller 1/Problema8/: main.cpp
Taller 2/Ejercicio-1/: CMakeLists.txt  main.cpp
Taller 2/Ejercicio-2/: CMakeLists.txt  main.cpp
Taller 2/Ejercicio-3/: CMakeLists.txt
Taller 2/Problema-2/: CMakeLists.txt  main.cpp
Taller 2/Problema-3/: CMakeLists.txt  main.cpp
Taller 2/Problema-4/: CMakeLists.txt  main.cpp
Taller 2/Problema-5/: CMakeLists.txt  main.cpp
Taller 2/Problema-6/: CMakeLists.txt  main.cpp
Taller 2/Problema-7/: CMakeLists.txt  main.cpp
Taller3/Ejercicio1/: CMakeLists.txt  main.cpp
Taller3/Ejercicio2/: CMakeLists.txt  main.cpp
