cmake_minimum_required(VERSION 3.16)

project(Problema-5 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(Problema-5 main.cpp)

include(GNUInstallDirs)
install(TARGETS Problema-5
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
